Fixed align issue in addAdditionalUsers page..

--- a/HexiCloud/public_html/css/hc-common.css
+++ b/HexiCloud/public_html/css/hc-common.css
@@ -30,6 +30,10 @@ html, body, .responsive-height {
     overflow-y: auto;
 }*/
 
+.text-center{
+    text-align: center;
+}
+
 .display-none {
     display: none !important;
 }
