--- a/HexiCloud/public_html/css/hc-service.css
+++ b/HexiCloud/public_html/css/hc-service.css
@@ -293,9 +293,6 @@ and open the template in the editor.
     z-index: 99999;
 }
 
-.provisioned-services .text-center{
-    text-align: center;
-}
 .provisioned-services .deep-red-button {
     height : 32px;
     min-width: 160px;
